@@ -1,10 +1,12 @@
 // $Id$
 
-Drupal.fbconnect = Drupal.fbconnect || {};
-Drupal.fbconnect.steam_publish = function() {
+Drupal.fbconnect = Drupal.fbconnect || {}; 
+Drupal.fbconnect.stream_publish = function() {
+  Drupal.behaviors.fbconnect_stream_publish = Drupal.fbconnect.stream_publish;
   if (Drupal.settings['FB.streamPublish']) {
     FB.ui(Drupal.settings['FB.streamPublish']);
+    delete Drupal.settings['FB.streamPublish'];
   }	
 };
 
-jQuery(document).bind('fb:init', Drupal.fbconnect.steam_publish);
+jQuery(document).bind('fb:init', Drupal.fbconnect.stream_publish);
