@@ -5,75 +5,8 @@
  * Impletementation of hook_init().
  */
 function fbconnect_stream_publish_init() {
-  global $base_url;
-  
   if (isset($_SESSION['fbconnect_feed'])) {
-    $site = variable_get('site_name', $base_url);
-    $feed = $_SESSION['fbconnect_feed'];
-
-    switch ($feed['type']) {
-      case 'comment' :
-        $autopublish = 'false';
-        $attachment = array(
-          'name'        => $feed['title'],
-          'href'        => $feed['nodeurl'],
-          'caption'     => t("{*actor*} commented at !site", array("!site" => $site)),
-          'description' => strip_tags($feed["comment"]),
-        );
-        $action_links = array(
-          array(
-            'text'  => $site,
-            'href'  => $base_url,
-          ),
-        );
-        $message = '';
-        break;
-
-      case 'node' :
-        $autopublish = 'false';
-        $attachment = array(
-          'name'        => $feed['title'],
-          'href'        => $feed['nodeurl'],
-          'caption'     => t("{*actor*} created some content at !site", array("!site" => $site)),
-        );
-        $action_links = array(
-          array(
-            'text'  => $site,
-            'href'  => $base_url,
-          ),
-        );
-        $message = '';
-        break;
-
-      case 'register' :
-        $autopublish = 'true';
-        $attachment = array(
-          'name'        => t('Welcome to @site', array('@site' => $site)),
-          'href'        => $base_url,
-          'caption'     => t("{*actor*} has registered at !site", array("!site" => $site)),
-        );
-        $action_links = array(
-          array(
-            'text'  => $site,
-            'href'  => $base_url,
-          ),
-        );
-        $message = '';
-        break;
-    }
-    
-    /**
-     * @see http://developers.facebook.com/docs/reference/rest/stream.publish
-     * @see http://developers.facebook.com/docs/guides/attachments
-     */
-    $method = 'stream.publish';    
-    $user_message_prompt = t('Share your thoughts');
-    $streamPublishArgs = compact('method', 'message', 'attachment', 'action_links', 'user_management_promt');
-    
-//    drupal_alter('fbconnect_stream_publish', $streamPublishArgs);
-    drupal_add_js(array('FB.streamPublish' => $streamPublishArgs), 'setting');
-    drupal_add_js(drupal_get_path('module', 'fbconnect_stream_publish') .'/fbconnect_stream_publish.js');
-
+    fbconnect_stream_publish_render_js($_SESSION['fbconnect_feed']);
     unset($_SESSION['fbconnect_feed']);
   }
 }
@@ -108,8 +41,6 @@ function fbconnect_stream_publish_form_alter(&$form, $form_state, $form_id) {
   switch ($form_id):
     // Facebook feed checkbox on comment form.
     case 'comment_form':
-//      $fbuid = fbconnect_get_fbuid();
-/*$fbuid && _is_fbconnect_user($fbuid) == $user->uid && */
       if ($form['uid']['#value'] == 0 || $form['uid']['#value'] == $user->uid) {
         $favicon = '<img src="http://wiki.developers.facebook.com/images/1/17/Connect_light_small_short.gif" />';
         $form['fbconnect_feed'] = array(
@@ -118,7 +49,14 @@ function fbconnect_stream_publish_form_alter(&$form, $form_state, $form_id) {
           '#default_value' => 1,
           '#weight' => 9,
         );
-        $form['#submit'][] = 'fbconnect_stream_publish_comment_feed_submit';
+        
+        if (module_exists('ajax_comments')) {
+          $form['submit']['#submit'][] = 'fbconnect_stream_publish_comment_feed_submit';
+          drupal_add_js(drupal_get_path('module', 'fbconnect_stream_publish') .'/fbconnect_stream_publish.js');
+        }
+        else {
+          $form['#submit'][] = 'fbconnect_stream_publish_comment_feed_submit';
+        }
       }
       break;
 
@@ -147,7 +85,7 @@ function fbconnect_stream_publish_form_alter(&$form, $form_state, $form_id) {
           '#type' => 'checkbox',
           '#title' => $favicon .' '. t('Publish To Facebook'),
           '#default_value' => 1,
-          '#weight' => 0,
+          '#weight' => 9,
         );
       }
       break;
@@ -188,12 +126,92 @@ function fbconnect_stream_publish_node_type_form_save(&$form, &$form_state) {
 function fbconnect_stream_publish_comment_feed_submit($form, &$form_state) {
   if ($form_state['values']['fbconnect_feed']) {
     $node = node_load($form_state['values']['nid']);
-     
-    $_SESSION['fbconnect_feed'] = array(
+
+    $feed = array(
       'type'    => 'comment',
       'comment' => $form_state['values']['comment'],
       'title'   => $node->title,
       'nodeurl' => url('node/' . $node->nid, array('absolute' => TRUE)),
     );
+    
+    if (module_exists('ajax_comments')) {
+      fbconnect_stream_publish_render_js($feed);
+    }
+    else {
+      $_SESSION['fbconnect_feed'] = $feed;
+    }
   }
+}
+
+/**
+ * @param array $feed
+ *    Properites - type, title, nodeurl[, comment]
+ */
+function fbconnect_stream_publish_render_js($feed) {
+  global $base_url;
+  
+  $site = variable_get('site_name', $base_url);
+
+  switch ($feed['type']) {
+    case 'comment' :
+      $autopublish = 'false';
+      $attachment = array(
+        'name'        => $feed['title'],
+        'href'        => $feed['nodeurl'],
+        'caption'     => t("{*actor*} commented at !site", array("!site" => $site)),
+        'description' => strip_tags($feed["comment"]),
+      );
+      $action_links = array(
+        array(
+          'text'  => $site,
+          'href'  => $base_url,
+        ),
+      );
+      $message = t('I posted a comment on !site_name.', array('!site_name' => variable_get('site_name', 'Drupal')));
+      break;
+
+    case 'node' :
+      $autopublish = 'false';
+      $attachment = array(
+        'name'        => $feed['title'],
+        'href'        => $feed['nodeurl'],
+        'caption'     => t("{*actor*} created some content at !site", array("!site" => $site)),
+      );
+      $action_links = array(
+        array(
+          'text'  => $site,
+          'href'  => $base_url,
+        ),
+      );
+      $message = t('I posted new content on !site_name.', array('!site_name' => variable_get('site_name', 'Drupal')));
+      break;
+
+    case 'register' :
+      $autopublish = 'true';
+      $attachment = array(
+        'name'        => t('Welcome to @site', array('@site' => $site)),
+        'href'        => $base_url,
+        'caption'     => t("{*actor*} has registered at !site", array("!site" => $site)),
+      );
+      $action_links = array(
+        array(
+          'text'  => $site,
+          'href'  => $base_url,
+        ),
+      );
+      $message = t('I just became a member at !site_name!', array('!site_name' => variable_get('site_name', 'Drupal')));
+      break;
+  }
+  
+  /**
+   * @see http://developers.facebook.com/docs/reference/rest/stream.publish
+   * @see http://developers.facebook.com/docs/guides/attachments
+   */
+  $method = 'stream.publish';    
+  $user_message_prompt = t('Share your thoughts');
+  $streamPublishArgs = compact('method', 'message', 'attachment', 'action_links', 'user_management_promt');
+    
+//  drupal_alter('fbconnect_stream_publish', $streamPublishArgs);
+  drupal_add_js(array('FB.streamPublish' => $streamPublishArgs), 'setting');
+  drupal_add_js(drupal_get_path('module', 'fbconnect_stream_publish') .'/fbconnect_stream_publish.js');
 }
